--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <repositories>
         <repository>
             <id>maven2</id>
-            <url>https://repo.maven.org/maven2</url>
+            <url>http://repo1.maven.org/maven2</url>
         </repository>
     </repositories>
 
