--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://192.168.2.200:8080/opt/tomcat/apache-tomcat-9.0.70/webapps</url>
+                    <server>Tomcat</server>
+                    <path>/testdir</path>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
